# turbofox

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  bench.py  flake.nix  hash.tc  run_bench.py  rustfmt.toml  shell.nix  testbucket_128  testbucket_256  thrp.py
.github/workflows/: linux_arm.yml  linux_arm_64_tests.yml  linux_x86.yml  linux_x86_64_tests.yml  release.yaml  release.yml  tests.yaml  tests.yml  win_arm.yml  win_x86.yml  windows_arm_64_tests.yml  windows_tests.yml  windows_x86_64_tests.yml
assets/: bench_del.csv  bench_get.csv  bench_set.csv
benches/: bench.rs  delete.rs  read.rs  write.rs
benchmarks/: base_bench.rs  bench.rs  mgr_bench.rs
examples/: basic.rs  custom.rs  default.rs  example.rs  multithreading.rs  simple.rs  turbo_buckets.rs
hasher/src/: lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
scripts/: bench_plot.py
simulations/: Cargo.toml  README.md
simulations/src/: main.rs
src/: bucket.rs  buffer.rs  cfg.rs  common.rs  constants.rs  core.rs  error.rs  errors.rs  file.rs  file_hash.rs  grantha.rs  hash.rs  hash_table.rs  hasher.rs  index.rs  iouring.rs  lib.rs  logger.rs  main.rs  queue.rs  router.rs  shard.rs  simd.rs  store.rs  table.rs  types.rs  utils.rs
src/burrow/: den.rs  mark.rs  mod.rs  trail.rs
src/core/: file.rs  hint.rs  mmap.rs  mod.rs  util.rs
src/engine/: cache.rs  meta.rs  mod.rs
src/kosh/: deha.rs  iouring.rs  meta.rs  mod.rs  patra.rs  simd.rs
src/linux/: file.rs  iouring.rs  mmap.rs  mod.rs
tests/: large_amounts.rs  stress_test.rs  stress_tests.rs
xxhash/: Cargo.toml
xxhash/src/: lib.rs  xxhash32.rs  xxhash64.rs
