[package]
name = "turbofox"
version = "0.0.1"
edition = "2024"
description = "A persistant and embedded KV Database built for on-device caching."
license = "Apache-2.0"
repository = "https://github.com/frozen-lab/turbofox"
keywords = ["key-value", "database", "persistent", "store", "simd"]

[dependencies]
log = "0.4.28"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[dev-dependencies]
rand = "0.9.2"
tempfile = "3.20.0"
env_logger = "0.11.8"
